<?xml version="1.0"?>
<package format="2">
<name>g29_turtle</name>
<version>0.1.0</version>
<description>To use the g29_turtle</description>
<license>Apache 2.0</license>
<author email="dkdlelrk12@naver.com">DongHee Ko</author>
<maintainer email="dkdlelrk12@naver.com">DongHee Ko</maintainer>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>message_generation</depend>
<export></export >
</package>
